# final-project-slam

./: README.md
ros2_ws/src/ball_tracking_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/ball_tracking_pkg/ball_tracking_pkg/: QBot.py  control_node.py  test_kobuki.py  vision_node.py
ros2_ws/src/ball_tracking_pkg/launch/: tracker_launch.py
ros2_ws/src/kinect_ros2/: CMakeLists.txt
ros2_ws/src/kinect_ros2/cmake/: Findlibfreenect.cmake
simulation/src/qbot_scanner/: package.xml  setup.cfg  setup.py
simulation/src/qbot_scanner/config/: qbot_controllers.yaml  slam_toolbox_params.yaml
simulation/src/qbot_scanner/launch/: qbot_bringup.launch.py
simulation/src/qbot_scanner/qbot_scanner/: scan_logic.py
simulation/src/qbot_scanner/rviz/: config.rviz
simulation/src/qbot_scanner/urdf/: qbot.urdf
simulation/src/qbot_scanner/worlds/: scan_world.world
